Complete the Config Auto Settings API implementions. Major code refactor for locale files.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -4,30 +4,18 @@
     "zh":"中文"
   },
 
-  "txt-on": "On",
-  "txt-off": "Off",
   "txt-ok": "OK",
   "txt-time": "Time",
   "txt-date": "Date",
   "txt-filter": "Filter",
   "txt-filterQuery": "Filter Query",
-  "txt-search": "Search",
-  "txt-reset": "Reset",
   "txt-monitor": "Monitor",
   "txt-pageSize": "Page Size",
   "txt-noData": "No Data",
   "txt-all": "All",
-  "txt-internet": "Internet",
-  "txt-intranet": "Intranet",
-  "txt-unknown": "Unknown",
   "txt-view": "View",
   "txt-close": "Close",
-  "txt-export": "Export",
-  "txt-enable": "Enable",
-  "txt-disable": "Disable",
   "txt-show": "Show",
-  "txt-yes": "Yes",
-  "txt-no": "No",
   "txt-account": "Account",
   "txt-accounts": "Accounts",
   "txt-accountPassword": "Account/Password",
@@ -43,20 +31,16 @@
   "txt-update": "Update",
   "txt-upload": "Upload",
   "txt-seat": "Seat",
-  "txt-agent": "Agent",
   "txt-service": "Service",
   "txt-number": "Number",
-  "txt-projectID": "Project ID",
   "txt-memo": "Memo",
   "txt-info": "Info",
-  "txt-selectFile": "Select a File",
   "txt-name": "Name",
   "txt-cancel": "Cancel",
   "txt-confirm": "Confirm",
   "txt-delete": "Delete",
   "txt-edit": "Edit",
   "txt-add": "Add",
-  "txt-add2": "Add",
   "txt-remove": "Remove",
   "txt-refresh": "Refresh",
   "txt-select": "Select",
@@ -67,14 +51,11 @@
   "txt-success": "Success",
   "txt-fail": "Fail",
   "txt-notFound": "Data not found",
-  "txt-online": "Online",
-  "txt-offline": "Offline",
   "txt-size": "Size",
   "txt-tree": "Tree",
   "txt-list": "List",
   "txt-grid": "Grid",
   "txt-status": "Status",
-  "txt-sensor": "Sensor",
   "txt-location": "Location",
   "txt-device": "Device",
   "txt-port": "Port",
@@ -90,11 +71,8 @@
   "txt-floorPlan": "Floor Plan",
   "txt-floorMap": "Floor Map",
   "txt-worldMap": "World Map",
-  "txt-fullScreen": "Full Screen",
-  "txt-indicators": "Indicators",
   "txt-analysis": "Analysis",
   "txt-report": "Report",
-  "txt-table": "Table",
   "txt-count": "Count",
   "txt-password": "Password",
   "txt-start": "Start",
@@ -108,6 +86,7 @@
   "txt-clear": "Clear",
   "txt-connect": "Connect",
   "txt-import": "Import",
+  "txt-export": "Export",
   "txt-keywords": "Keywords",
   "txt-help": "Help",
   "txt-warn": "Warn",
@@ -130,56 +109,21 @@
   "txt-analyze": "Analyze",
   "txt-send": "Send",
 
-  "txt-daily": "Daily",
-  "txt-weekly": "Weekly",
-  "txt-monthly": "Monthly",
-  "txt-mon": "Monday",
-  "txt-tue": "Tuesday",
-  "txt-wed": "Wednesday",
-  "txt-thu": "Thursday",
-  "txt-fri": "Friday",
-  "txt-sat": "Saturday",
-  "txt-sun": "Sunday",
-
   "txt-dashboard": "Dashboard",
-  "txt-network": "Network",
-  "txt-hmd": "HMD",
   "txt-netflow": "Netflow",
   "txt-syslog": "Syslog",
   "txt-endpoint": "Endpoint",
   "txt-configuration": "Configuration",
 
-  "txt-flowAnalysis": "Flow Analysis",
   "txt-edgeManage": "Edge Management",
-  "txt-agentManage": "Agent Management",
-  "txt-threatManage": "Threat Intelligence Management",
-  "txt-honeyManage": "Honeynet Management",
   "txt-topology": "Network Topology",
   "txt-accountManage": "Account Management",
   "txt-syslogManage": "Syslog Management",
   "txt-serviceStatus": "Service Status",
   "txt-networkInventory": "Network Inventory",
 
-  "txt-honeypot-dashboard": "Dashboard",
   "txt-edge": "Edge",
   "txt-threatIntelligence": "Threat Intelligence",
-  "txt-honeypot-host": "Honeypot Host",
-  "txt-channel": "Channel",
-  "txt-attacks": "Attacks",
-  "txt-attacks-map": "Attacks Map",
-  "txt-honeypot": "Honeypot",
-  "txt-employee-record": "Employee Activity Record",
-  "txt-email-report": "Email Report Settings",
-
-  "txt-netflowImport": "Netflow Import",
-  "txt-log-capture": "Log Capture",
-  "txt-ipImport": "IP Import",
-  "txt-ipNetflow": "IP Netflow",
-  "txt-edge-select": "Edge Select",
-  "txt-network-scan": "Network Scan",
-  "txt-adImport": "AD Import",
-  "txt-adConnect": "AD Connect",
-  "txt-mixName": "Name Management",
   "txt-addDepartment": "Add Department",
   "txt-addTitle": "Add Title",
   "txt-updateDepartment": "Update Department",
@@ -194,30 +138,21 @@
   "txt-addNewOwner": "Add Owner",
   "txt-editOwner": "Edit Owner",
   "txt-manageDepartmentTitle": "Manage Department and Title",
-  "txt-network-ip": "IP",
   "txt-network-map": "Map",
-  "txt-plan-map": "Map and Seat Information",
   "txt-selected-node": "Selected Node",
   "txt-mixName": "Department & Title Management",
-  "txt-noempty": "No Empty Name",
+  "txt-noEsmpty": "No Empty Name",
+  "txt-memoMaxLength": "maximum 250 characters",
+  "txt-updateTime": "Update Time",
 
-  "txt-listText": "List",
-  "txt-attackCounts": "Attack Count",
   "txt-uploadPhoto": "Upload Photo",
-  "txt-notApplicable": "N/A",
   "txt-required": "This field is required",
-  "txt-requiredErrorMsg": "Please enter all the required fields",
-  "txt-requiredFileMsg": "Please select a file",
-  "txt-fileUploadedSuccess": "File is uploaded successfully",
-  "txt-fileUploadedFail": "Error, please try again",
   "txt-pcapDownloadFail": "Error, please try again",
   "txt-pcapNotAvailable": "PCAP content is not available",
   "txt-file-format-error": "File format should be in ",
   "txt-delete-msg": "Are you sure you want to delete this",
   "txt-account-unlock": "Are you sure you want to unlcok the account",
   "txt-commaSeparated": "separated by comma ,",
-  "txt-modifyDates": "Modify Dates",
-  "txt-ipDuplicated": "Are you sure you want to add duplicated IP",
 
   "txt-statistics": "Statistics",
   "txt-table": "Table",
@@ -291,7 +226,7 @@
     "txt-safetyScan": "Safety Scan"
   },
 
-  "network": {
+  "events": {
     "statistic": {
       "txt-statisticCharts": "Statistic Charts",
       "allSourceServices": "Aggregate All Source Services",
@@ -320,13 +255,7 @@
       "top10AttackedProtocol": "TOP 10 Attacked Protocol",
       "top10AttackingLogin": "TOP 10 Attacking Login",
       "top10AttackingPassword": "TOP 10 Attacking Password",
-      "top10AttackingLoginPass": "TOP 10 Attacking Login and Password",
-      "table": {
-        "service": "Service",
-        "number": "Count",
-        "country": "Country",
-        "city": "City"
-      }
+      "top10AttackingLoginPass": "TOP 10 Attacking Login and Password"
     },
     "connections": {
       "txt-search-manual": "Manual",
@@ -383,40 +312,6 @@
       "txt-downloadMalware": "$t(txt-download) Malware",
       "txt-maxDataMsg": "The maximum data count is 10,000",
       "txt-viewADrecord": "View AD Record"
-    },
-    "agent": {
-      "txt-agentSearch": "IP:Port",
-      "txt-threatsSearch": "Date",
-      "txt-analyzed": "Analyzed",
-      "txt-unanalyzed": "Unanalyzed",
-      "txt-analyzing": "Analyzing",
-      "txt-agentMode": "$t(txt-agent) Mode",
-      "txt-dateRange": "$t(txt-agent) Date Range",
-      "txt-uploadPCAP": "$t(txt-upload) PCAP",
-      "txt-uploadIndicators": "$t(txt-upload) $t(txt-indicators)",
-      "txt-agentUpdateSuccess": "Agent is updated successfully",
-      "txt-agentUpdateFail": "Error, please try again",
-      "txt-agentEditSuccess": "Agent is added/updated successfully",
-      "txt-agentEditFail": "Error, please try again",
-      "txt-agentEditError1": "General Error",
-      "txt-lowercaseOnly": "Lowercase only",
-      "txt-agentEditError2": "Agent ID field is NULL or Empty",
-      "txt-agentEditError3": "Project ID field is NULL or Empty",
-      "txt-agentEditError4": "Project ID field is Duplicated",
-      "txt-agentEditError5": "IP and Port field is NULL or Empty",
-      "txt-agentEditError6": "IP and Port field is Duplicated",
-      "txt-agentEditError7": "Agent (ipPort) is not Reachable",
-      "txt-agentEditNoStartDate": "Agent start date is missing",
-      "txt-agentEditNoEndDate": "Agent end date is missing",
-      "txt-agentEditPastEndDate": "Agent end date must be a future date",
-      "txt-addAgent": "$t(txt-add) $t(txt-agent)",
-      "txt-editAgent": "$t(txt-edit) $t(txt-agent)",
-      "txt-deleteAgent": "$t(txt-delete) $t(txt-agent)",
-      "txt-deleteAgentMsg": "Are you sure you want to delete this $t(txt-agent)",
-      "txt-ipValidationFail": "Please enter a valid IP:Port address",
-      "txt-memoMaxLength": "maximum 250 characters",
-      "txt-previousUpdateTime": "Previous Threat Intelligence Update Date",
-      "txt-pcap-tooltip": "Upload pcap file to "
     }
   },
 
@@ -440,42 +335,8 @@
     "txt-recipientEmail": "Recipient Email"
   },
 
-  "hmdFields": {
-    "ipDeviceUUID": "Host ID",
-    "hostId": "Host ID",
-    "hostName": "Host Name",
-    "taskId": "Task ID",
-    "ip": "IP",
-    "mac": "MAC",
-    "createDttm": "Create Date",
-    "runningTaskCount": "Running Task Count",
-    "waitingTaskCount": "Waiting Task Count",
-    "completeTaskCount": "Complete Task Count",
-    "addTask": "$t(txt-add) Task",
-    "viewTask": "$t(txt-view) Task",
-    "taskName": "Task名稱",
-    "reqType": "Request Type",
-    "reqCommand": "Request Command",
-    "reqParameters": "Request Parameters",
-    "fileCompressPassward": "File Compress Password",
-    "fileUrl": "File URL",
-    "fileAccount": "File Account",
-    "filePassward": "File Password",
-    "rspStatus": "Response Status",
-    "rspOutput": "Response Output",
-    "executeStartDttm": "Execute Start Datetime",
-    "executeEndDttm": "Execute End Datetime",
-    "taskStatus": "Task Status",
-    "taskCreateDttm": "Task Create Datetime",
-    "taskUpdateDttm": "Task Update Datetime",
-    "taskHandleDttm": "Task Handle Datetime",
-    "taskResponseDttm": "Task Response Datetime",
-    "taskComment": "Task Comment"
-  },
-
   "edgeManagement": {
     "txt-threatSettings": "Threat Settings",
-    "txt-notificationSettings": "Notification Settings",
     "txt-basicInfo": "Info",
     "txt-editEdge": "Edit Edge",
     "txt-edgeName": "Edge Name",
@@ -491,7 +352,6 @@
     "txt-anyTime": "Any Time",
     "txt-customTime": "Custom Time",
     "txt-memo": "Memo",
-    "txt-memoMaxLength": "maximum 250 characters",
     "txt-edgeUpdateSuccess": "Edge is updated successfully",
     "txt-edgeUpdateFail": "Error, please try again",
     "txt-edgeEditSuccess": "Edge is added/updated successfully",
@@ -505,40 +365,36 @@
     "txt-edgeEditError7": "Edge (ipPort) is not Reachable",
     "txt-edgeEditNoStartDate": "Edge start date is missing",
     "txt-edgeEditNoEndDate": "Edge end date is missing",
-    "txt-edgeEditPastEndDate": "Edge end date must be a future date"
+    "txt-edgeEditPastEndDate": "Edge end date must be a future date",
+    "txt-ipValidationFail": "Please enter a valid IP:Port address"
   },
 
-  "honeynet": {
+  "network-inventory": {
+    "txt-deviceList": "Device List",
+    "txt-deviceMap": "Device Map",
+    "txt-AddIP": "Add IP",
+    "txt-autoSettings": "Auto Settings",
+    "txt-backToList": "$t(txt-back) to $t(txt-listText)",
+    "txt-backToMap": "$t(txt-back) to $t(txt-map)",
+    "txt-ipEditSuccess": "IP is added/updated successfully",
+    "txt-lastUpdate": "Last Update",
     "txt-createTime": "Create Time",
-    "txt-updateTime": "Update Time",
-    "txt-startTime": "Start time",
-    "txt-addEmailReport": "$t(txt-add) $t(txt-email-report)",
-    "txt-editEmailReport": "$t(txt-edit) $t(txt-email-report)",
-    "txt-deleteEmailReport": "$t(txt-delete) $t(txt-email-report)",
-    "txt-analysisReport": "$t(txt-analysis) $t(txt-report)",
-    "txt-editSensor": "$t(txt-edit) $t(txt-sensor)",
-    "txt-deleteHost": "$t(txt-delete) $t(txt-honeypot-host)",
-    "txt-deleteHostMsg": "$t(txt-delete-msg) $t(txt-honeypot-host)",
-    "txt-noPayloadInfo": "No payload information is available",
-    "txt-addGroupName": "Add Group Name",
-    "keyStatus": {
-      "txt-normal": "Normal",
-      "txt-wait": "Wait to Delete",
-      "txt-deleted": "Deleted"
-    },
-    "statistic": {
-      "topAttackIp": {
-        "srcIp": "Source IP",
-        "srcCountry": "Source Country",
-        "attackCnt": "Attacks Count"
-      },
-      "topAttackHoneypot": {
-        "vpnName": "VPN Name",
-        "name": "Name",
-        "ip": "IP",
-        "honeypot": "Honey Pot",
-        "attackCnt": "Attacks Count"
-      }
+    "txt-responseTime": "Response Time",
+    "txt-suspiciousFileCount": "Suspicious File Count",
+    "txt-suspiciousFileName": "Suspicious Filename",
+    "txt-suspiciousFilePath": "Suspicious File Path",
+    "txt-reCheck": "Re-check",
+    "txt-reCompress": "Re-compress",
+    "txt-editFloorMap": "$t(txt-edit) $t(txt-floorMap)",
+    "txt-deleteDevice": "$t(txt-delete) $t(txt-device)",
+    "txt-deleteDeviceMsg": "$t(txt-delete-msg) $t(txt-device)",
+    "auto-settings": {
+      "txt-ipRange": "IP Range",
+      "txt-AD": "AD",
+      "txt-LDAP": "LDAP",
+      "txt-netflow": "Netflow",
+      "txt-scanner": "Scanner",
+      "txt-connectionsFail": "Connections Fail"
     }
   },
 
@@ -598,93 +454,6 @@
     "txt-removeDevice": "$t(txt-remove) this device from seat"
   },
 
-  "network-inventory": {
-    "txt-deviceList": "Device List",
-    "txt-deviceMap": "Device Map",
-    "txt-AddIP": "Add IP",
-    "txt-autoSettings": "Auto Settings",
-    "txt-notificationSettings": "Notification Settings",
-    "txt-backToList": "$t(txt-back) to $t(txt-listText)",
-    "txt-backToMap": "$t(txt-back) to $t(txt-map)",
-    "txt-ipEditSuccess": "IP is added/updated successfully",
-    "txt-lastUpdate": "Last Update",
-    "txt-createTime": "Create Time",
-    "txt-responseTime": "Response Time",
-    "txt-suspiciousFileCount": "Suspicious File Count",
-    "txt-suspiciousFileName": "Suspicious Filename",
-    "txt-suspiciousFilePath": "Suspicious File Path",
-    "txt-reCheck": "Re-check",
-    "txt-reCompress": "Re-compress",
-    "txt-editFloorMap": "$t(txt-edit) $t(txt-floorMap)",
-    "txt-deleteDevice": "$t(txt-delete) $t(txt-device)",
-    "txt-deleteDeviceMsg": "$t(txt-delete-msg) $t(txt-device)",
-    "auto-settings": {
-      "txt-ipRange": "IP Range",
-      "txt-AD": "AD",
-      "txt-LDAP": "LDAP",
-      "txt-netflow": "Netflow",
-      "txt-scanner": "Scanner",
-      "txt-connectionsFail": "Connections Fail"
-    }
-  },
-
-  "edgeFields": {
-    "agentName": "Name",
-    "ipPort": "VPN IP",
-    "serviceType": "Service",
-    "description": "Description",
-    "keywords": "Keywords",
-    "serviceType": "Service Type",
-    "connectionStatus": "Connection Status"
-  },
-  "sensorFields": {
-    "areaName": "Area Name",
-    "seatName": "Seat Name",
-    "city": "City",
-    "country": "Country",
-    "countryCode": "Country Code",
-    "latitude": "Latitude",
-    "longitude": "Longitude"
-  },
-  "threatsFields": {
-    "createDttm": "Upload Datetime",
-    "certification": "Certification",
-    "domainName": "Domain Name",
-    "white domainName": "White Domain Name",
-    "fileHash": "File Hash",
-    "ip": "IP",
-    "snort": "Snort",
-    "url": "URL",
-    "yara": "Yara"
-  },
-  "agentFields": {
-    "ipPort": "Agent",
-    "projectId": "Project",
-    "memo": "Memo",
-    "status": "Service Status",
-    "agentApiStatus": "API Status",
-    "agentMode": "Mode",
-    "analysis": "Analysis",
-    "pCapFileUploadDT": "PCAP",
-    "threatIntellUpdDt": "Threat Intelligence",
-    "options": "",
-    "startStop": ""
-  },
-  "honeynetFields": {
-    "vpnName": "VPN Name",
-    "name": "Name",
-    "ip": "IP",
-    "hostname": "Hostname",
-    "honeypot": "Honey Pot",
-    "status": "Status",
-    "attackCnt": "Attacks Count",
-    "lastDataUpdDT": "Last Data Update Time",
-    "enableUpd": "Update Data",
-    "isDeleted": "Key Status",
-    "deletedDT": "Key Delete Time",
-    "groupName": "Group Name",
-    "options": ""
-  },
   "attacksFields" : {
     "timestamp": "Date",
     "sensor": "Sensor",
@@ -733,29 +502,6 @@
     "fileDownload": "File Download",
     "count": "Count"
   },
-  "emailReportFields": {
-    "reportPeriod": "Report Period",
-    "isEnabled": "Enabled",
-    "sendHour": "Sned Hour",
-    "sendWeekDay": "Send Day of Week",
-    "sendMonthDay": "Send Day of Month",
-    "sendBulk": "Send Bulk",
-    "emailSubject": "Email Subject",
-    "recipientList": "Recipients",
-    "networkType": "Network Type",
-    "honeypot": "HoneyPot",
-    "honeypotList": "HoneyPot",
-    "lastStatus": "Last Status",
-    "lastFailEmail": "Last Failed Email",
-    "options": ""
-  },
-  "malwareFields": {
-    "id": "ID",
-    "path": "File Path",
-    "createTime": "Create Time",
-    "updateTime": "Update Time",
-    "options": "Analysis Report"
-  },
   "ownerFields": {
     "ownerID": "ID",
     "ownerName": "Name",
@@ -783,17 +529,6 @@
     "keyword": "Keyword",
     "connSize": "Connections Size",
     "unauthType": "Unauthorize Type"
-  },
-  "adFields": {
-    "@timestamp": "Timestamp",
-    "target": "Target Username",
-    "message": "Message"
-  },
-  "seFields": {
-    "operatorId": "Employee ID",
-    "operatorName": "Employee Name",
-    "deviceTime": "Device Time",
-    "photo": "$t(txt-photo)"
   },
   "syslogFields": {
     "port": "Received Port",
