--- a/locales/en/tableFields.json
+++ b/locales/en/tableFields.json
@@ -449,6 +449,46 @@
     "configSource": "Config Source",
     "msg": "Message"
   },
+  "hmdFields": {
+    "ipDeviceUUID": "Host ID",
+    "hostId": "Host ID",
+    "hostName": "Host Name",
+    "taskId": "Task ID",
+    "ip": "IP",
+    "mac": "MAC",
+    "createDttm": "Create Date",
+    "runningTaskCount": "Running Task Count",
+    "waitingTaskCount": "Waiting Task Count",
+    "completeTaskCount": "Complete Task Count",
+    "addTask": "$t(txt-add) Task",
+    "viewTask": "$t(txt-view) Task",
+    "taskName": "Task名稱",
+    "reqType": "Request Type",
+    "reqCommand": "Request Command",
+    "reqParameters": "Request Parameters",
+    "fileCompressPassward": "File Compress Password",
+    "fileUrl": "File URL",
+    "fileAccount": "File Account",
+    "filePassward": "File Password",
+    "rspStatus": "Response Status",
+    "rspOutput": "Response Output",
+    "executeStartDttm": "Execute Start Datetime",
+    "executeEndDttm": "Execute End Datetime",
+    "taskStatus": "Task Status",
+    "taskCreateDttm": "Task Create Datetime",
+    "taskUpdateDttm": "Task Update Datetime",
+    "taskHandleDttm": "Task Handle Datetime",
+    "taskResponseDttm": "Task Response Datetime",
+    "taskComment": "Task Comment"
+  },
+  "edgeFields": {
+    "agentName": "Name",
+    "ipPort": "VPN IP",
+    "description": "Description",
+    "keywords": "Keywords",
+    "serviceType": "Service Type",
+    "connectionStatus": "Connection Status"
+  },
   "serviceStatusFields": {
     "status": "Status",
     "serviceName": "Service Name"
