--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -4,30 +4,18 @@
     "zh":"中文"
   },
 
-	"txt-on": "開",
-	"txt-off": "關",
   "txt-ok": "確認",
 	"txt-time": "時間",
 	"txt-date": "日期",
 	"txt-filter": "過濾",
   "txt-filterQuery": "過濾條件",
 	"txt-search": "搜尋",
-	"txt-reset": "重設",
-	"txt-monitor": "即時",
 	"txt-pageSize": "單頁資料數",
 	"txt-noData": "沒有符合的資料",
 	"txt-all": "全部",
-	"txt-internet": "外網",
-	"txt-intranet": "內網",
-	"txt-unknown": "未知",
   "txt-view": "瀏覽",
   "txt-close": "關閉",
-  "txt-export": "匯出",
-  "txt-enable": "啟用",
-  "txt-disable": "停用",
   "txt-show": "顯示",
-  "txt-yes": "是",
-  "txt-no": "否",
   "txt-account": "帳號",
   "txt-accounts": "帳號",
   "txt-accountPassword": "帳號/密碼",
@@ -43,20 +31,16 @@
   "txt-update": "更新",
   "txt-upload": "上傳",
   "txt-seat": "座位",
-  "txt-agent": "Agent",
   "txt-service": "服務",
   "txt-number": "數字",
-  "txt-projectID": "項目ID",
   "txt-memo": "備忘錄",
   "txt-info": "資訊",
-  "txt-selectFile": "選擇檔案",
   "txt-name": "名稱",
   "txt-cancel": "取消",
   "txt-confirm": "確認",
   "txt-delete": "刪除",
   "txt-edit": "編輯",
   "txt-add": "新增",
-  "txt-add2": "加入",
   "txt-remove": "移除",
   "txt-refresh": "更新",
   "txt-select": "選擇",
@@ -67,14 +51,11 @@
   "txt-success": "成功",
   "txt-fail": "失敗",
   "txt-notFound": "查無資料",
-  "txt-online": "上線",
-  "txt-offline": "離線",
   "txt-size": "數量",
   "txt-tree": "樹狀",
   "txt-list": "列表式",
   "txt-grid": "網格式",
   "txt-status": "狀態",
-  "txt-sensor": "Sensor",
   "txt-location": "地點",
   "txt-device": "裝置",
   "txt-port": "Port",
@@ -90,11 +71,8 @@
   "txt-floorPlan": "樓層結構",
   "txt-floorMap": "樓層圖",
   "txt-worldMap": "世界地圖",
-  "txt-fullScreen": "全螢幕",
-  "txt-indicators": "情資",
   "txt-analysis": "分析",
   "txt-report": "報告",
-  "txt-table": "表格",
   "txt-count": "次數",
   "txt-password": "密碼",
   "txt-start": "開始",
@@ -108,6 +86,7 @@
   "txt-clear": "清除條件",
   "txt-connect": "連線",
   "txt-import": "匯入",
+  "txt-export": "匯出",
   "txt-keywords": "關鍵字",
   "txt-help": "說明",
   "txt-warn": "警告",
@@ -130,56 +109,21 @@
   "txt-analyze": "分析",
   "txt-send": "寄出",
 
-  "txt-daily": "每日",
-  "txt-weekly": "每星期",
-  "txt-monthly": "每月",
-  "txt-mon": "星期一",
-  "txt-tue": "星期二",
-  "txt-wed": "星期三",
-  "txt-thu": "星期四",
-  "txt-fri": "星期五",
-  "txt-sat": "星期六",
-  "txt-sun": "星期日",
-
   "txt-dashboard": "Dashboard",
-  "txt-network": "Network",
-  "txt-hmd": "HMD",
   "txt-netflow": "Netflow",
   "txt-syslog": "Syslog",
   "txt-endpoint": "Endpoint",
   "txt-configuration": "Configuration",
 
-	"txt-flowAnalysis": "Flow分析",
   "txt-edgeManage": "Edge管理",
-	"txt-agentManage": "Agent管理",
-	"txt-threatManage": "威脅情資管理",
-  "txt-honeyManage": "Honeynet管理",
   "txt-topology": "網路拓樸",
   "txt-accountManage": "帳號管理",
   "txt-syslogManage": "系統日誌管理",
   "txt-serviceStatus": "服務狀態",
   "txt-networkInventory": "網路清單",
 
-  "txt-honeypot-dashboard": "Dashboard",
   "txt-edge": "Edge",
   "txt-threatIntelligence": "威脅情資",
-	"txt-honeypot-host": "蜜罐主機",
-	"txt-channel": "Channel",
-  "txt-attacks": "攻擊資訊",
-	"txt-attacks-map": "攻擊地圖",
-	"txt-honeypot": "蜜罐",
-	"txt-employee-record": "員工活動紀錄",
-  "txt-email-report": "Email報告設定",	
-
-  "txt-netflowImport": "Netflow匯入",
-  "txt-log-capture": "日誌擷取",
-  "txt-ipImport": "IP匯入",
-  "txt-ipNetflow": "IP Netflow",
-  "txt-edge-select": "Edge選擇",
-  "txt-network-scan": "網路掃描",
-  "txt-adImport": "AD匯入",
-  "txt-adConnect": "AD連線",
-  "txt-mixName": "名稱管理",
   "txt-addDepartment": "新增部門",
   "txt-addTitle": "新增職稱",
   "txt-updateDepartment": "編輯部門",
@@ -194,30 +138,21 @@
   "txt-addNewOwner": "新增人員",
   "txt-editOwner": "編輯人員",
   "txt-manageDepartmentTitle": "編輯部門與職稱",
-  "txt-network-ip": "IP",
   "txt-network-map": "樓層圖",
-  "txt-plan-map": "樓層座位資訊",
   "txt-selected-node": "選擇樓層節點",
   "txt-mixName":"部門與職稱管理",
-  "txt-noempty": "名稱不能為空",
+  "txt-noEmpty": "名稱不能為空",
+  "txt-memoMaxLength": "上限250字",
+  "txt-updateTime": "更新時間",
 
-	"txt-listText": "列表",
-  "txt-attackCounts": "攻擊次數",
 	"txt-uploadPhoto": "上傳照片",
-	"txt-notApplicable": "不適用",
 	"txt-required": "此為必填欄位",
-	"txt-requiredErrorMsg": "請填寫必填欄位",
-	"txt-requiredFileMsg": "請選擇檔案",
-	"txt-fileUploadedSuccess": "檔案上傳成功",
-	"txt-fileUploadedFail": "檔案上傳失敗",
 	"txt-pcapDownloadFail": "檔案下載失敗",
   "txt-pcapNotAvailable": "找不到PCAP檔案",
 	"txt-file-format-error": "檔案格式必須為",
 	"txt-delete-msg": "確定要刪除",
   "txt-account-unlock": "確定要解鎖帳號",
   "txt-commaSeparated": "用逗號(,)區隔",
-  "txt-modifyDates": "更改時間",
-  "txt-ipDuplicated": "確定要新增重複IP",
 
   "txt-statistics": "統計",
   "txt-table": "列表",
@@ -291,7 +226,7 @@
     "txt-safetyScan": "安全掃描"
   },
 
-  "network": {
+  "events": {
     "statistic": {
       "txt-statisticCharts": "統計圖表",
       "allSourceServices": "來源端服務統計",
@@ -320,13 +255,7 @@
       "top10AttackedProtocol": "前10個受攻擊Protocol",
       "top10AttackingLogin": "前10個攻擊使用的登入帳號",
       "top10AttackingPassword": "前10個攻擊使用的登入密碼",
-      "top10AttackingLoginPass": "前10個攻擊使用的登入帳號與密碼",
-      "table": {
-        "service": "服務",
-        "number": "數量",
-        "country": "國家",
-        "city": "城市"
-      }
+      "top10AttackingLoginPass": "前10個攻擊使用的登入帳號與密碼"
     },
     "connections": {
       "txt-search-manual": "自訂時間",
@@ -383,40 +312,6 @@
       "txt-downloadMalware": "$t(txt-download)惡意程式",
       "txt-maxDataMsg": "資料筆數最大為10,000筆",
       "txt-viewADrecord": "瀏覽AD紀錄"
-    },
-    "agent": {
-      "txt-agentSearch": "IP:Port",
-      "txt-threatsSearch": "日期",
-      "txt-analyzed": "已分析",
-      "txt-unanalyzed": "未分析",
-      "txt-analyzing": "分析中",
-      "txt-agentMode": "$t(txt-agent)形式",
-      "txt-dateRange": "$t(txt-agent)時間起迄",
-      "txt-uploadPCAP": "$t(txt-upload)PCAP",
-      "txt-uploadIndicators": "$t(txt-upload)$t(txt-indicators)",
-      "txt-agentUpdateSuccess": "Agent更新成功",
-      "txt-agentUpdateFail": "Agent更新失敗",
-      "txt-agentEditSuccess": "Agent新增/編輯成功",
-      "txt-agentEditFail": "Agent新增/編輯失敗",
-      "txt-agentEditError1": "一般錯誤",
-      "txt-lowercaseOnly": "英文小寫字母",
-      "txt-agentEditError2": "Agent ID 為空值",
-      "txt-agentEditError3": "Project ID 為空值",
-      "txt-agentEditError4": "Project ID 已有重複",
-      "txt-agentEditError5": "Agent 的 IP 與 Port 為空值",
-      "txt-agentEditError6": "Agent 的 IP 與 Port 已有重複",
-      "txt-agentEditError7": "Agent (ipPort)不存在",
-      "txt-agentEditNoStartDate": "Agent起始時間不得為空白",
-      "txt-agentEditNoEndDate": "Agent結束時間不得為空白",
-      "txt-agentEditPastEndDate": "Agent結束時間不得為過去時間",
-      "txt-addAgent": "$t(txt-add)$t(txt-agent)",
-      "txt-editAgent": "$t(txt-edit)$t(txt-agent)",
-      "txt-deleteAgent": "$t(txt-delete)$t(txt-agent)",
-      "txt-deleteAgentMsg": "確定要刪除$t(txt-agent)",
-      "txt-ipValidationFail": "請輸入正確IP:Port格式",
-      "txt-memoMaxLength": "上限250字",
-      "txt-previousUpdateTime": "前次更新情資時間",
-      "txt-pcap-tooltip": "pcap檔案需上傳到"
     }
   },
 
@@ -440,42 +335,8 @@
     "txt-recipientEmail": "收件者郵件信箱"
   },
 
-  "hmdFields": {
-    "ipDeviceUUID": "主機ID",
-    "hostId": "主機ID",
-    "hostName": "主機名稱",
-    "taskId": "Task ID",
-    "ip": "IP",
-    "mac": "MAC",
-    "createDttm": "建立時間",
-    "runningTaskCount": "Running Task Count",
-    "waitingTaskCount": "Waiting Task Count",
-    "completeTaskCount": "Complete Task Count",
-    "addTask": "$t(txt-add)Task",
-    "viewTask": "$t(txt-view)Task",
-    "taskName": "Task名稱",
-    "reqType": "Request Type",
-    "reqCommand": "Request Command",
-    "reqParameters": "Request Parameters",
-    "fileCompressPassward": "File Compress Password",
-    "fileUrl": "File URL",
-    "fileAccount": "File Account",
-    "filePassward": "File Password",
-    "rspStatus": "Response Status",
-    "rspOutput": "Response Output",
-    "executeStartDttm": "Execute Start Datetime",
-    "executeEndDttm": "Execute End Datetime",
-    "taskStatus": "Task Status",
-    "taskCreateDttm": "Task Create Datetime",
-    "taskUpdateDttm": "Task Update Datetime",
-    "taskHandleDttm": "Task Handle Datetime",
-    "taskResponseDttm": "Task Response Datetime",
-    "taskComment": "Task Comment"
-  },
-
   "edgeManagement": {
     "txt-threatSettings": "威脅情資設定",
-    "txt-notificationSettings": "通知設定",
     "txt-basicInfo": "基本資訊",
     "txt-editEdge": "編輯Edge",
     "txt-edgeName": "Edge Name",
@@ -491,7 +352,6 @@
     "txt-anyTime": "不限時段",
     "txt-customTime": "自訂時段",
     "txt-memo": "備忘錄",
-    "txt-memoMaxLength": "上限250字",
     "txt-edgeUpdateSuccess": "Edge更新成功",
     "txt-edgeUpdateFail": "Edge更新失敗",
     "txt-edgeEditSuccess": "Edge新增/編輯成功",
@@ -505,40 +365,36 @@
     "txt-edgeEditError7": "Edge(ipPort)不存在",
     "txt-edgeEditNoStartDate": "Edge起始時間不得為空白",
     "txt-edgeEditNoEndDate": "Edge結束時間不得為空白",
-    "txt-edgeEditPastEndDate": "Edge結束時間不得為過去時間"
+    "txt-edgeEditPastEndDate": "Edge結束時間不得為過去時間",
+    "txt-ipValidationFail": "請輸入正確IP:Port格式"
   },
 
-  "honeynet": {
-    "txt-createTime": "建立時間",
-    "txt-updateTime": "更新時間",
-    "txt-startTime": "開始時間",
-    "txt-addEmailReport": "$t(txt-add)$t(txt-email-report)",
-    "txt-editEmailReport": "$t(txt-edit)$t(txt-email-report)",
-    "txt-deleteEmailReport": "$t(txt-delete)$t(txt-email-report)",
-    "txt-analysisReport": "$t(txt-analysis)$t(txt-report)",
-    "txt-editSensor": "$t(txt-edit)$t(txt-sensor)",
-    "txt-deleteHost": "$t(txt-delete)$t(txt-honeypot-host)",
-    "txt-deleteHostMsg": "$t(txt-delete-msg)$t(txt-honeypot-host)",
-    "txt-noPayloadInfo": "沒有Payload資料",
-    "txt-addGroupName": "新增群組名稱",
-    "keyStatus": {
-      "txt-normal": "正常",
-      "txt-wait": "等待刪除",
-      "txt-deleted": "已標示刪除"
-    },
-    "statistic": {
-      "topAttackIp": {
-        "srcIp": "來源IP",
-        "srcCountry": "來源國家",
-        "attackCnt": "攻擊次數"
-      },
-      "topAttackHoneypot": {
-        "vpnName": "VPN名稱",
-        "name": "名稱",
-        "ip": "IP",
-        "honeypot": "蜜罐種類",
-        "attackCnt": "攻擊次數"
-      }
+  "network-inventory": {
+    "txt-deviceList": "裝置列表",
+    "txt-deviceMap": "裝置地圖",
+    "txt-AddIP": "手動新增IP",
+    "txt-autoSettings": "自動執行設定",
+    "txt-backToList": "$t(txt-back)$t(txt-listText)",
+    "txt-backToMap": "$t(txt-back)$t(txt-map)",
+    "txt-ipEditSuccess": "IP新增/編輯成功",
+    "txt-lastUpdate": "最近更新時間",
+    "txt-createTime": "最近觸發時間",
+    "txt-responseTime": "最近回應時間",
+    "txt-suspiciousFileCount": "可疑檔案數",
+    "txt-suspiciousFileName": "可疑檔案名稱",
+    "txt-suspiciousFilePath": "可疑檔案路徑",
+    "txt-reCheck": "重新檢測",
+    "txt-reCompress": "重新壓縮",
+    "txt-editFloorMap": "$t(txt-edit)$t(txt-floorMap)",
+    "txt-deleteDevice": "$t(txt-delete)$t(txt-device)",
+    "txt-deleteDeviceMsg": "$t(txt-delete-msg)$t(txt-device)",
+    "auto-settings": {
+      "txt-ipRange": "IP Range",
+      "txt-AD": "AD",
+      "txt-LDAP": "LDAP",
+      "txt-netflow": "Netflow",
+      "txt-scanner": "Scanner",
+      "txt-connectionsFail": "連線失敗"
     }
   },
 
@@ -598,93 +454,6 @@
     "txt-removeDevice": "從座位中$t(txt-delete)此裝置"
   },
 
-  "network-inventory": {
-    "txt-deviceList": "裝置列表",
-    "txt-deviceMap": "裝置地圖",
-    "txt-AddIP": "手動新增IP",
-    "txt-autoSettings": "自動執行設定",
-    "txt-notificationSettings": "通知設定",
-    "txt-backToList": "$t(txt-back)$t(txt-listText)",
-    "txt-backToMap": "$t(txt-back)$t(txt-map)",
-    "txt-ipEditSuccess": "IP新增/編輯成功",
-    "txt-lastUpdate": "最近更新時間",
-    "txt-createTime": "最近觸發時間",
-    "txt-responseTime": "最近回應時間",
-    "txt-suspiciousFileCount": "可疑檔案數",
-    "txt-suspiciousFileName": "可疑檔案名稱",
-    "txt-suspiciousFilePath": "可疑檔案路徑",
-    "txt-reCheck": "重新檢測",
-    "txt-reCompress": "重新壓縮",
-    "txt-editFloorMap": "$t(txt-edit)$t(txt-floorMap)",
-    "txt-deleteDevice": "$t(txt-delete)$t(txt-device)",
-    "txt-deleteDeviceMsg": "$t(txt-delete-msg)$t(txt-device)",
-    "auto-settings": {
-      "txt-ipRange": "IP Range",
-      "txt-AD": "AD",
-      "txt-LDAP": "LDAP",
-      "txt-netflow": "Netflow",
-      "txt-scanner": "Scanner",
-      "txt-connectionsFail": "連線失敗"
-    }
-  },
-
-  "edgeFields": {
-    "agentName": "名稱",
-    "ipPort": "VPN IP",
-    "serviceType": "服務",
-    "description": "Description",
-    "keywords": "關鍵字",
-    "serviceType": "服務種類",
-    "connectionStatus": "連線狀態"
-  },
-  "sensorFields": {
-    "areaName": "區域名稱",
-    "seatName": "位置名稱",
-    "city": "城市",
-    "country": "國家",
-    "countryCode": "國家地區代碼",
-    "latitude": "緯度",
-    "longitude": "經度"
-  },
-  "threatsFields": {
-    "createDttm": "上傳時間",
-    "certification": "憑證",
-    "domainName": "網域名稱",
-    "white domainName": "白網域名稱",
-    "fileHash": "File Hash",
-    "ip": "IP",
-    "snort": "Snort",
-    "url": "URL",
-    "yara": "Yara"
-  },
-  "agentFields": {
-    "ipPort": "Agent",
-    "projectId": "項目",
-    "memo": "備忘錄",
-    "status": "服務狀態",
-    "agentApiStatus": "API 狀態",
-    "agentMode": "形式",
-    "analysis": "分析",
-    "pCapFileUploadDT": "PCAP",
-    "threatIntellUpdDt": "情資",
-    "options": "",
-    "startStop": ""
-  },
-  "honeynetFields": {
-    "vpnName": "VPN名稱",
-    "name": "名稱",
-    "ip": "IP",
-    "hostname": "主機名稱",
-    "honeypot": "蜜罐種類",
-    "status": "狀態",
-    "attackCnt": "攻擊次數",
-    "lastDataUpdDT": "資料最後更新時間",
-    "enableUpd": "資料更新",
-    "isDeleted": "金鑰狀態",
-    "deletedDT": "金鑰刪除時間",
-    "groupName": "群組名稱",
-    "options": ""
-  },
   "attacksFields" : {
     "timestamp": "日期",
     "sensor": "Sensor",
@@ -733,29 +502,6 @@
     "fileDownload": "檔案下載",
     "count": "數量"
   },
-  "emailReportFields": {
-    "reportPeriod": "報告週期",
-    "isEnabled": "啟用",
-    "sendHour": "寄送小時",
-    "sendWeekDay": "每星期發送日",
-    "sendMonthDay": "每月發送日",
-    "sendBulk": "大宗郵件發送",
-    "emailSubject": "郵件主旨",
-    "recipientList": "收件者郵件",
-    "networkType": "網路類型",
-    "honeypot": "密罐",
-    "honeypotList": "密罐",
-    "lastStatus": "最後發送狀態",
-    "lastFailEmail": "最後發送失敗收件者",
-    "options": ""
-  },
-  "malwareFields": {
-    "id": "ID",
-    "path": "檔案路徑",
-    "createTime": "建立時間",
-    "updateTime": "更新時間",
-    "options": "分析報告"
-  },
   "ownerFields": {
     "ownerID": "ID",
     "ownerName": "所屬人員",
@@ -783,17 +529,6 @@
     "keyword": "關鍵字",
     "connSize": "Connections Size",
     "unauthType": "Unauthorize Type"
-  },
-  "adFields": {
-    "@timestamp": "日期",
-    "target": "目標人員",
-    "message": "訊息"
-  },
-  "seFields": {
-    "operatorId": "員工ID",
-    "operatorName": "員工名字",
-    "deviceTime": "設備時間",
-    "photo": "$t(txt-photo)"
   },
   "syslogFields": {
     "port": "接收Port",
