--- a/locales/zh/tableFields.json
+++ b/locales/zh/tableFields.json
@@ -449,6 +449,46 @@
     "configSource": "設定檔名稱",
     "msg": "訊息"
   },
+  "hmdFields": {
+    "ipDeviceUUID": "主機ID",
+    "hostId": "主機ID",
+    "hostName": "主機名稱",
+    "taskId": "Task ID",
+    "ip": "IP",
+    "mac": "MAC",
+    "createDttm": "建立時間",
+    "runningTaskCount": "Running Task Count",
+    "waitingTaskCount": "Waiting Task Count",
+    "completeTaskCount": "Complete Task Count",
+    "addTask": "$t(txt-add)Task",
+    "viewTask": "$t(txt-view)Task",
+    "taskName": "Task名稱",
+    "reqType": "Request Type",
+    "reqCommand": "Request Command",
+    "reqParameters": "Request Parameters",
+    "fileCompressPassward": "File Compress Password",
+    "fileUrl": "File URL",
+    "fileAccount": "File Account",
+    "filePassward": "File Password",
+    "rspStatus": "Response Status",
+    "rspOutput": "Response Output",
+    "executeStartDttm": "Execute Start Datetime",
+    "executeEndDttm": "Execute End Datetime",
+    "taskStatus": "Task Status",
+    "taskCreateDttm": "Task Create Datetime",
+    "taskUpdateDttm": "Task Update Datetime",
+    "taskHandleDttm": "Task Handle Datetime",
+    "taskResponseDttm": "Task Response Datetime",
+    "taskComment": "Task Comment"
+  },
+  "edgeFields": {
+    "agentName": "名稱",
+    "ipPort": "VPN IP",
+    "description": "Description",
+    "keywords": "關鍵字",
+    "serviceType": "服務種類",
+    "connectionStatus": "連線狀態"
+  },
   "serviceStatusFields": {
     "status": "狀態",
     "serviceName": "服務名稱"
