--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -41,6 +41,7 @@
   "txt-delete": "Delete",
   "txt-edit": "Edit",
   "txt-add": "Add",
+  "txt-add2": "Add",
   "txt-remove": "Remove",
   "txt-refresh": "Refresh",
   "txt-select": "Select",
@@ -108,6 +109,7 @@
   "txt-requestSent": "Request Sent",
   "txt-analyze": "Analyze",
   "txt-send": "Send",
+  "txt-networkBehavior": "Network Behavior",
 
   "txt-dashboard": "Dashboard",
   "txt-netflow": "Netflow",
@@ -376,7 +378,6 @@
     "txt-autoSettings": "Auto Settings",
     "txt-backToList": "$t(txt-back) to $t(txt-listText)",
     "txt-backToMap": "$t(txt-back) to $t(txt-map)",
-    "txt-ipEditSuccess": "IP is added/updated successfully",
     "txt-lastUpdate": "Last Update",
     "txt-createTime": "Create Time",
     "txt-responseTime": "Response Time",
@@ -466,6 +467,7 @@
     "destPort": "Destination Port",
     "honeyPot": "Honeypot",
     "protocol": "Protocol",
+    "protocolType": "Protocol Type",
     "attackCnt": "Attack Count",
     "level": "Level",
     "maskedIP": "Masked IP",
