--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -41,6 +41,7 @@
   "txt-delete": "刪除",
   "txt-edit": "編輯",
   "txt-add": "新增",
+  "txt-add2": "加入",
   "txt-remove": "移除",
   "txt-refresh": "更新",
   "txt-select": "選擇",
@@ -108,6 +109,7 @@
   "txt-requestSent": "需求已送出",
   "txt-analyze": "分析",
   "txt-send": "寄出",
+  "txt-networkBehavior": "網路行為",
 
   "txt-dashboard": "Dashboard",
   "txt-netflow": "Netflow",
@@ -376,7 +378,6 @@
     "txt-autoSettings": "自動執行設定",
     "txt-backToList": "$t(txt-back)$t(txt-listText)",
     "txt-backToMap": "$t(txt-back)$t(txt-map)",
-    "txt-ipEditSuccess": "IP新增/編輯成功",
     "txt-lastUpdate": "最近更新時間",
     "txt-createTime": "最近觸發時間",
     "txt-responseTime": "最近回應時間",
@@ -466,6 +467,7 @@
     "destPort": "目的Port",
     "honeyPot": "蜜罐種類",
     "protocol": "Protocol",
+    "protocolType": "Protocol種類",
     "attackCnt": "攻擊次數",
     "level": "等級",
     "maskedIP": "網段",
